--- a/tritoncook-app/src/App.css
+++ b/tritoncook-app/src/App.css
@@ -1,11 +1,10 @@
-.App {
-  text-align: center;
+body {
+  background: linear-gradient(to top, #7baebf, #e6e1c5); /* Gradient color */
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -13,20 +12,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
