--- a/tritoncook-app/src/css/LoginHomepage.css
+++ b/tritoncook-app/src/css/LoginHomepage.css
@@ -1,16 +1,56 @@
-.container{
+.login-homepage-container {
+    display: flex;
+    height: 100vh;
     background-size: cover;
-    background-position: center;
-    background-image: url("/backgroundLogin.png");
+    background-image: '/backgroundLogin.png';
+
 }
 
-.logo .logo-container{
-    width: 40%;
+/*adjust logo*/
+.logo{
+    width: 50%;
     height: auto;
-    border-radius: 100px;
+    border-radius: 22.5%;
     opacity: 0px;
     display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+
+.logo-container {
+    margin-left: 35%
+}
+.left-section {
+    width: 50%;
+    justify-content: center;
+    align-items: center;
+    padding: 25px;
+}
+.slogan{
+    text-align: center;
+    font-style: italic;
+    font-size: 50px;
+    
+}
+.app-name{
+    font-size: 60px;
+    font-weight: bold;
+    text-align: center;
+
+}
+.slogan-container{
+    margin-top:15%;
+}
+.right-section {
+    width: 50%;
     justify-content: center;
     align-items: center;
 }
 
+
+.login-form-container{
+    background-color: #F7FFE2;
+    width: 70%;
+    margin-top:20%;
+}
