--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,15 @@
   text-align: center;
 }
 
+body{
+  background-image: linear-gradient(to top, #efe68c, #00bfff);
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  margin: 0;
+
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
