--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,15 @@
   color: #61dafb;
 }
 
+body {
+  background: linear-gradient(to top, #7baebf, #e6e1c5); /* Gradient color */
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+}
+
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
