--- a/client/src/css/WelcomePage.css
+++ b/client/src/css/WelcomePage.css
@@ -17,6 +17,8 @@
     justify-content: center;
     text-align: center;
     align-items: center;
+    margin:center;
+    
 }
 .congrat-message{
     font-size:50px;
