--- a/client/src/components/searchpage/SearchPage.css
+++ b/client/src/components/searchpage/SearchPage.css
@@ -1,39 +1,50 @@
 .search-page {
-  position: relative; 
-  width: 100%;
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 5%;
+  width: 100vw;
+  height: 100vh;
+  padding: 20px;
+  box-sizing: border-box;
 }
 
 .search-bar-container {
-  position: absolute;
-  left: 330px;
-  top: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 1000px;
 }
 
 .search-bar {
   box-sizing: border-box;
-  width: 1000px;
-  height: 100px;
+  width: 90%; /* Adjusts with screen width */
+  max-width: 1000px;
+  height: 10vh; /* Scales height based on viewport */
+  max-height: 100px;
   border-radius: 100px;
   border: 1px solid #F7FFE2;
   background: #F7FFE2;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-}  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
 
 .search-bar input {
-  position: absolute;
-  width: 300px;
-  height: 44px;
-  left: 120px;
-  top: 25px;
-  border: none;
+  width: 70%; /* Scales with search bar width */
+  height: 60%;
   background: transparent;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 500;
-  font-size: 40px;
-  line-height: 48px;
+  font-size: 2vw; /* Scales font with viewport width */
+  line-height: 1.2;
   color: #000000;
+  border: none;
+  outline: none;
 }
 
 .search-bar input::placeholder {
@@ -41,53 +52,52 @@
 }
 
 .search-icon {
-  position: absolute;
   width: 60px;
   height: 60px;
+  position: absolute;
   left: 20px;
-  top: 20px;
+  top: 50%;
+  transform: translateY(-50%);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-}  
+}
 
 .info-text {
-  position: absolute;
-  width: 880px;
-  height: 150px;
-  left: 356px;
-  top: 200px;
+  margin-top: 2vh;
+  width: 90%;
+  max-width: 880px;
+  /* text-align: center; */
   font-family: 'Inter';
-  font-style: normal;
-  font-size: 40px;
+  font-size: 2.2vw;
   font-weight: 900;
-  line-height: 43px;
+  line-height: 1.1;
   color: #000000;
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: var(--Schemes-On-Primary, #FFF);
-  text-align: left;
 }
 
 .info-text .no-worries {
-  font-size: 36px;
+  font-size: 2vw;
   font-weight: 500;
 }
 
-
 .info-text .under-30 {
-  font-size: 36px;
+  font-size: 2vw;
   font-weight: 900;
 }
 
 .explore-button-container {
-  position: absolute;
-  left: 0px;
-  top: 200px;
-  width: 260px;
-  height: 60px;
+  margin-top: 2vh;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  max-width: 260px;
 }
 
 .explore-button {
-  width: 100%;
-  height: 100%;
+  /* width: 100%; */
+  width: 90vw;
+  /* height: 60px; */
+  height: 6vh;
   background: #FFF1C2;
   border: none;
   border-radius: 30px;
@@ -95,7 +105,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 20px;
+  padding: 0 25px;
   cursor: pointer;
 }
 
@@ -103,29 +113,30 @@
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 900;
-  font-size: 36px;
-  line-height: 44px;
+  font-size: 2vw;
+  line-height: 1.2;
   color: #2047A3;
 }
 
-
-
 .line-8, .line-9 {
-  position: absolute;
   width: 25px;
   height: 0px;
   border: 4px solid #2047A3;
   border-radius: 50px;
-  left: 205px;
+  left: 90%;
 }
 
 .line-8 {
+  /* top: 20%; */
   top: 19px;
   transform: rotate(35deg);
+  margin-bottom: 6px;
 }
 
 .line-9 {
+  /* top: 60%; */
   top: 34px;
   transform: rotate(-35deg);
+  margin-top: 6px;
 }
   
