--- a/client/src/components/searchpage/SearchPage.css
+++ b/client/src/components/searchpage/SearchPage.css
@@ -168,8 +168,8 @@
 }
 
 .try-again-button button {
-  background-color: blue;
-  color: white;
+  background-color: lightblue;
+  color: black;
   font-size: 16px;
   padding: 10px 20px;
   border-radius: 20px;
@@ -179,7 +179,7 @@
 }
 
 .try-again-button button:hover {
-  background-color: blue;
+  background-color: lightblue;
 }
 
 .error-message {
