--- a/client/src/css/CreateAccountForm.css
+++ b/client/src/css/CreateAccountForm.css
@@ -1,45 +1,44 @@
-
-.CreateAccountForm label, .CreateAccountForm{
-    gap: 5px;
-    height: 100%;
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
-    font-size: 35px;
-    margin-left: 10px
-
+.CreateAccountForm label,
+.CreateAccountForm {
+  gap: 5px;
+  height: 100%;
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  font-size: 35px;
+  margin-left: 10px
 }
 
 
-.CreateAccountForm input{
-    border: none;
-    border-radius: 10px;
-    font-size: 35px;
-    width: 95%;
-    margin-left: 10px;
-    padding-top:10px;
-    padding-bottom: 10px;
-    background-color: rgb(236, 236, 236);
+.CreateAccountForm input {
+  border: none;
+  border-radius: 10px;
+  font-size: 35px;
+  width: 95%;
+  margin-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: rgb(236, 236, 236);
 
 }
 
 #register-button {
-    padding: 15px;
-    align-items: center;
-    width: 80%;
-    font-size: 35px;
-    border-radius: 15px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    background-color: #FFF1C2;
-    border: 2px solid #ffc400;
-    text-align: center;
-    margin: 10%;
-    margin-top: 25px;
+  padding: 15px;
+  align-items: center;
+  width: 80%;
+  font-size: 35px;
+  border-radius: 15px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  background-color: #FFF1C2;
+  border: 2px solid #ffc400;
+  text-align: center;
+  margin: 10%;
+  margin-top: 25px;
 }
 
 #register-button:hover {
-    background-color: #B0E0E2;
-    border: 2px solid #7AB5C6;
-    font-weight: bold;
+  background-color: #B0E0E2;
+  border: 2px solid #7AB5C6;
+  font-weight: bold;
 }
