--- a/client/src/components/searchpage/SearchPage.css
+++ b/client/src/components/searchpage/SearchPage.css
@@ -9,14 +9,6 @@
   box-sizing: border-box;
 }
 
-.search-bar-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  max-width: 1000px;
-}
-
 .search-bar {
   box-sizing: border-box;
   width: 90%; /* Adjusts with screen width */
@@ -26,39 +18,91 @@
   border-radius: 100px;
   border: 1px solid #F7FFE2;
   background: #F7FFE2;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   display: flex;
   align-items: center;
-  justify-content: center;
   position: relative;
+  transition: height 0.3s ease, box-shadow 0.3s ease;
+  overflow: hidden;
+  flex-direction: column;
+  padding: 10px 20px;
+}
+
+.search-bar.expanded {
+  height: 70vh; /* Scales height based on viewport */
+  max-height: 1000px;
+  border-radius: 50px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.search-icon {
+  position: absolute;
+  left: 20px;
+  top: 18px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.delete-icon {
+  position: absolute;
+  top: 18px;
+  right: 20px; 
+  cursor: pointer;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.delete-icon svg {
+  width: 70px;
+  height: 65px;
 }
 
 .search-bar input {
-  width: 70%; /* Scales with search bar width */
-  height: 60%;
+  position: absolute;
+  width: 70%;
+  left: 110px;
+  top: 20px;
   background: transparent;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 500;
-  font-size: 3vw; /* Scales font with viewport width */
-  line-height: 1.2;
+  font-size: 45px;
   color: #000000;
   border: none;
   outline: none;
 }
 
 .search-bar input::placeholder {
-  color: #C1C1BC;
+  color: #D9D9D9;
 }
 
-.search-icon {
-  width: 60px;
-  height: 60px;
-  position: absolute;
-  left: 20px;
-  top: 50%;
-  transform: translateY(-50%);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+.search-separator{
+  width: 100%;
+  height: 2px;
+  background-color: black;
+  margin: 85px 0 20px 0;
+}
+
+.history-items {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-height: calc(5 * 4rem); 
+  overflow-y: auto;
+}
+
+.history-item {
+  display: flex;
+  align-items: center;
+  padding: 12px 20px;
+  font-family: 'Inter', sans-serif;
+  font-size: 2rem;
+  font-weight: 500;
+  color: #C1C1BC;
+  cursor: pointer;
+  gap: 20px;
+}
+
+.history-item:hover {
+  background-color: #f2f2f2;
 }
 
 .info-text {
@@ -190,4 +234,6 @@
   line-height: 1;
   color: #000000;
 }
+
+
   
