increased readability by reducing white outline

--- a/client/src/components/searchpage/SearchPage.css
+++ b/client/src/components/searchpage/SearchPage.css
@@ -139,7 +139,7 @@
   font-weight: 900;
   line-height: 1.1;
   color: #000000;
-  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-width: .1px;
   -webkit-text-stroke-color: var(--Schemes-On-Primary, #FFF);
 }
 
