--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -59,8 +59,12 @@ img.postImage{
     padding: 30px;
 }
 
-.post, .home, .search{
+.post{
     padding: 20px;
+}
+
+.home, .search{
+    padding: 20px 20px 15px 20px
 }
 
 .notif:hover, .post:hover, .home:hover, .search:hover, .logout:hover{
