--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,7 +1,9 @@
-main {
-  position: sticky;
+main{
+  position: sticky; 
   top: 0;
   z-index: 1000;
+  width: 100vw;
+  height: 94px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -9,7 +11,7 @@ main {
   background-color: #00bfff;
 }
 
-ul {
+ul{
   display: flex;
   list-style-type: none;
   align-items: center;
@@ -17,7 +19,7 @@ ul {
   position: relative;
 }
 
-ul.left {
+ul.left{
   display: flex;
   list-style-type: none;
   padding-left: 20px;
@@ -25,14 +27,14 @@ ul.left {
   align-items: center;
 }
 
-ul.middle {
+ul.middle{
   display: flex;
   list-style-type: none;
   gap: 110px;
   align-items: center;
 }
 
-ul.right {
+ul.right{
   display: flex;
   list-style-type: none;
   padding-right: 20px;
@@ -40,10 +42,31 @@ ul.right {
   align-items: center;
 }
 
-li.notif {
-  margin-top: 10px;
+img.notifImage{
+  margin-top: 5px;
+  margin-left: -10px;
 }
 
-img.postImage {
+img.postImage{
   width: 50px;
+}
+
+.notif{
+  padding: 10px 10px 5px 10px;
+}
+
+.logout{
+  padding: 30px 30px 25px 30px;
+}
+
+.post{
+  padding: 20px 20px 12px 20px;
+}
+
+.home, .search{
+  padding: 20px 20px 10px 20px
+}
+
+.notif:hover, .post:hover, .home:hover, .search:hover, .logout:hover{
+  background-color: #FFF1C2;
 }
