--- a/client/src/components/navbar/Sidebar.css
+++ b/client/src/components/navbar/Sidebar.css
@@ -3,24 +3,99 @@
     z-index: 1000;
     width: 100%;
     height: 100vh;
-    font-size: 25px;
-    list-style: none;
+}
+.mainbuttons-container{
     display: flex;
     flex-direction: column;
     text-decoration: none;
-    
-}
-.sidebar-container div{
-    display: flex;
-    flex-direction: row;
-    text-decoration: none;
     margin: 25px;
-    font-size: 35px;
+    width: 100%;
+    height: 50px;
+    margin-left: 0px;
+    gap: 20px;
+}
+
+.mainbuttons-container a{
+    text-decoration: none;
+    color: black;
+    font-size: 16px;
+}
+
+.profilebutton, .favoritebutton, .friendsbutton, .filterbutton{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
 #saved-icon, #friends-icon, #profile-icon, #filter-icon{
-    height: 80px;
-    font-weight: bold;
     margin-right: 10px;
+}
+
+#saved-icon{
+    width: 80px;
+    height: 80px;
+    vertical-align: middle;
+}
+
+#friends-icon{
+    height: 60px;
+    width: 60px;
+    vertical-align: middle;
+}
+
+#profile-icon{
+    width: 80px;
+    height: 80px;
+    vertical-align: middle;
+}
+
+#filter-icon{
+    width: 60px;
+    height: 60px;
+    vertical-align: middle;
+}
+
+.profilebutton:hover, .favoritebutton:hover, .friendsbutton:hover, .filterbutton:hover{
+    background-color: #fff1c2;
+}
+
+.dropdown-container{
+    display: flex;
+    flex-direction: column;
+}
+
+.dropdown{
+    display: flex;
+    justify-content: center;
+    padding: 5px;
+    font-size: 25px;
+}
+
+.dropdown a{
+    text-decoration: none;
+    color: black;
+}
+
+#filterarrow{
+    margin-right: 14px;
+}
+
+.dropdown:hover{
+    background-color: #fff1c2;
+}
+
+.timemenu{
+    position: absolute;
+    right: -130px;
+    top: 414px;
+}
+
+.timepopup{
+    background-color: #F7FFE2;
+    padding: 20px;
+}
+
+.timepopup:hover{
+    background-color: #fff1c2;
 }
