--- a/client/src/components/loginForm/LoginForm.css
+++ b/client/src/components/loginForm/LoginForm.css
@@ -20,9 +20,8 @@
 }
 
 .sign-in-button,
-#buttonDiv,
-.create-account-button {
-  padding: 15px;
+#buttonDiv{  
+  padding: 5px;
   width: 95%;
   font-size: 30px;
   border-radius: 15px;
@@ -32,9 +31,24 @@
   border: 2px solid #00aeff;
   text-align: center;
   margin: 15px;
-  margin-top: 25px;
   color: white;
 }
+
+.create-account-button {
+  padding: 5px;
+  width: 90%;
+  font-size: 30px;
+  border-radius: 15px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  background-color: #1a73e8;
+  border: 2px solid #00aeff;
+  text-align: center;
+  margin: 15px;
+  margin-left: 20px;
+  color: white;
+}
+
 
 .sign-in-button:hover,
 .create-account-button:hover {
