--- a/client/src/components/navbar/Sidebar.css
+++ b/client/src/components/navbar/Sidebar.css
@@ -135,6 +135,29 @@
     background-color: #fff1c2;
 }
 
+.selectedingredient{
+    background-color: #fff1c2;
+    width: 122px;
+    height: 21px;
+    border-radius: 15px;
+    flex-shrink: 0;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    left: 60px;
+}
+
+.removeingredient{
+    background: none;
+    border: none;
+    font-size: 25px;
+    color: #667085;
+    position: relative;
+    top: -3px;
+    position: relative;
+    left: 20px;
+}
+
 .selectedtime{
     background-color: #fff1c2;
     width: 122px;
@@ -147,11 +170,46 @@
     left: 60px;
 }
 
-.remove-time{
+.removetime{
     background: none;
     border: none;
     font-size: 25px;
     color: #667085;
     position: relative;
     top: -3px;
+}
+
+.selectedcuisine{
+    background-color: #fff1c2;
+    width: 101px;
+    height: 21px;
+    border-radius: 15px;
+    flex-shrink: 0;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    left: 60px;
+}
+
+.removecuisine{
+    background: none;
+    border: none;
+    font-size: 25px;
+    color: #667085;
+    position: relative;
+    top: -3px;
+}
+
+.insidefilterbutton{
+    background-color: #B0E0e2;
+    border-radius: 15px;
+    border-color: #7ab5c6;
+    width: 122px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    top: 10px;
+    left: 40px;
 }
