--- a/client/src/components/recipes/AddRecipe.css
+++ b/client/src/components/recipes/AddRecipe.css
@@ -17,10 +17,12 @@
 
 input {
     padding: 10px;
-    font-size: 14px;
     border: 1px solid #ccc;
     border-radius: 4px;
     width: 100%;
+    height: 50px;
+    margin-right: 5%;
+    font-size: 28px;
 }
 
 form {
@@ -37,6 +39,7 @@ form {
     align-items: center;
     gap: 15px;
     margin-bottom: 15px;
+    height: 100px;
 }
 
 label {
@@ -54,21 +57,21 @@ label.required::after {
 
 .form-actions {
     display: flex;
-    justify-content: flex-start; 
-    gap: 10px; 
-    margin-top: 20px; 
-  }
+    justify-content: flex-start;
+    gap: 10px;
+    margin-top: 20px;
+}
 
-  button {
+button {
     padding: 12px 30px;
     background: #B0E0E2;
     border: none;
-    border-radius: 30px; /* Rounded button corners */
+    border-radius: 30px;
     cursor: pointer;
     font-size: 16px;
     font-weight: bold;
     text-transform: uppercase;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
-    transition: all 0.3s ease; /* Smooth transition for hover and focus */
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
     margin-right: 15px;
-  }
+}
