--- a/client/src/components/accountpage/UserProfilePage.css
+++ b/client/src/components/accountpage/UserProfilePage.css
@@ -1,13 +1,8 @@
 .page_style{
-    /* display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh; */
     display: flex;
     justify-content: center;
     flex-direction: column;
-    align-items: center;  /* Aligns the content to the top */
+    align-items: center;
     height: 100vh;
     gap: 20px;
   }
@@ -92,7 +87,7 @@
     flex-direction: column;
     align-items: flex-start; /* Align content to the start */
     width: 590px;
-    height: 60px;
+    height: 180px;
     border-radius: 20px;
     background-color: white;
     padding: 20px;
@@ -113,3 +108,49 @@
   }
 
 
+  .button-container {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 20px;
+    gap: 16px;
+  }
+  
+  .button {
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 16px 23px 0px 22px;
+    border-radius: 20px;
+    border: 5px solid #3059DE;
+    background: rgba(247, 255, 226, 0.00);
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .button-text {
+    color: #000;
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-bottom: 8px;
+  }
+  
+  .button svg {
+    width: 49px;
+    height: 52px;
+  }
+  
+  .button:hover {
+    background-color: lightyellow;
+  }
+
+  .container {
+    display: flex; 
+    justify-content: space-between;
+    padding: 20px;
+    gap: 40px;
+  }
