--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -70,3 +70,11 @@ img.postImage{
 .notif:hover, .post:hover, .home:hover, .search:hover, .logout:hover{
   background-color: #FFF1C2;
 }
+
+.userprofile{
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 2px solid #000000;
+}
