--- a/client/src/components/accountpage/UserProfilePage.css
+++ b/client/src/components/accountpage/UserProfilePage.css
@@ -120,6 +120,8 @@
     display: inline-flex;
     flex-direction: column;
     justify-content: flex-end;
+    width: 80px; /* Ensure uniform width */
+    height: 50px; /* Ensure uniform height */
     align-items: center;
     padding: 16px 23px 0px 22px;
     border-radius: 20px;
