--- a/client/src/components/accountpage/UserInfoPage.css
+++ b/client/src/components/accountpage/UserInfoPage.css
@@ -7,10 +7,10 @@
   }
 
   .styled-button {
-    position: absolute; /* Place it relative to the .page_style container */
-    top: 20px; /* Distance from the top */
-    left: 50%; /* Center horizontally */
-    transform: translateX(-50%); /* Adjust for button's width to center perfectly */
+    position: absolute;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
     width: 131px;
     height: 87px;
     border-radius: 20px;
@@ -20,6 +20,15 @@
     font-weight: bold;
     cursor: pointer;
     outline: none;
+}
+
+.edit-text {
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-bottom: 8px;
 }
   
   .styled-button:hover {
@@ -86,4 +95,55 @@
     font-family: Inter, sans-serif;
     font-size: 16px;
     font-weight: 600;
+}
+
+.button-container {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 20px;
+    gap: 16px;
+  }
+  
+  .button {
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    width: 80px; /* Ensure uniform width */
+    height: 50px; /* Ensure uniform height */
+    align-items: center;
+    padding: 16px 23px 0px 22px;
+    border-radius: 20px;
+    border: 5px solid #3059DE;
+    background: rgba(247, 255, 226, 0.00);
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .button-text {
+    color: #000;
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-bottom: 8px;
+  }
+  
+  .button svg {
+    width: 49px;
+    height: 52px;
+  }
+  
+  .button:hover {
+    background-color: lightyellow;
+  }
+
+  .page-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row; /* Ensures elements are in a row */
+    gap: 20px; /* Adjust space between containers */
+    position: relative;
 }
