--- a/client/src/components/accountpage/EditUserInfo.css
+++ b/client/src/components/accountpage/EditUserInfo.css
@@ -6,33 +6,50 @@
     position: relative;
   }
 
-  .styled-button {
-    position: absolute;
-    top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
+  .top-button-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px; /* Space between the buttons */
+    margin-top: 20px; /* Adjust spacing as needed */
+  }
+  
+  .cancel-button,
+  .save-changes-button {
     width: 131px;
     height: 87px;
     border-radius: 20px;
-    border: 5px solid #3059DE;
-    background: #EEEE37;
+    border: 5px solid #3059de;
+    font-family: 'Inter', sans-serif;
     font-size: 16px;
-    font-weight: bold;
-    cursor: pointer;
-    outline: none;
-}
-
-.edit-text {
-    font-family: Inter;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
+    font-weight: 700;
     line-height: normal;
-    margin-bottom: 8px;
-}
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; /* Stack items vertically */
+  }
   
-  .styled-button:hover {
-    background: #d6d637; /* Slightly darker shade for hover effect */
+  .cancel-button {
+    background-color: #e3e3e3;
+    color: #000;
+  }
+
+  .save-icon {
+    margin-top: 0px;
+    flex-shrink: 0;
+    width: 48px;
+    height: 48px;
+  }
+
+  .cancel-icon {
+    margin-top: 6px;
+    flex-shrink: 0;
+  }
+
+  .save-changes-button {
+    background-color: #bae2b0;
+    color: #000;
   }
 
   .blocks-container {
