add error message function

--- a/client/src/components/recipes/AddRecipe.css
+++ b/client/src/components/recipes/AddRecipe.css
@@ -79,3 +79,43 @@ button {
 .cancel {
     background-color: #D9D9D9;
 }
+
+.error-container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* width: 50%; */
+    padding: 20px;
+    background-color: #ffffff;
+    border: 4px solid #ff4c4c;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    border-radius: 20px;
+    z-index: 1000;
+    max-width: 60%;
+    max-height: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.error-text {
+    margin: 10px 0;
+    font-size: 30px;
+    color: #333333;
+}
+
+.error-header {
+    font-size: 60px;
+    color: #ff4c4c;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    font-weight: bold;
+}
+
+.error-icon {
+    font-size: 32px;
+}
