--- a/client/src/components/accountpage/GuestAccount.css
+++ b/client/src/components/accountpage/GuestAccount.css
@@ -56,8 +56,8 @@
   .button {
     padding: 4px 6px;
     background-color: black;
-    color: white;
-    font-size: 20px;
+    /* color: white; */
+    font-size: 15px;
     border-radius: 15px;
   }
 
