--- a/client/src/components/savedFavoriteRecipeList/SavedFavoriteRecipeList.css
+++ b/client/src/components/savedFavoriteRecipeList/SavedFavoriteRecipeList.css
@@ -19,3 +19,36 @@
     max-width: 100%;
   }
 }
+
+.Announcement{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-color: black;
+}
+.Announcement button{
+  font-size: 40px;
+  font-weight: bold;
+  width:fit-content;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  font-size: 30px;
+  border-radius: 15px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  background-color: yellow;
+  border: 2px solid #fff700;
+  text-align: center;
+  margin: 15px;
+  margin-left: 20px;
+  color: black;
+}
+
+.Announcement button:hover{
+  background-color: #fff387;
+  border: 2px solid #fff700;
+  font-size: 41px;
+  color: black;
+}
