--- a/client/src/components/recipes/RecipeItem.css
+++ b/client/src/components/recipes/RecipeItem.css
@@ -63,7 +63,7 @@
     gap: 10px;
 }
 
-.like-button {
+.fav-button, .like-button {
     outline: none;
     border: none;
     box-shadow: none;
@@ -117,4 +117,9 @@
     background-color: #1a73e8;
     border: 2px solid #00aeff;
     color: white;
+  }
+
+  .like-container{
+    display: flex;
+    flex-direction: row;
   }
