--- a/client/src/components/navbar/Sidebar.css
+++ b/client/src/components/navbar/Sidebar.css
@@ -88,12 +88,15 @@
 .dropdownsearch{
     border: none;
     height: 30px;
+    width: 98.2%;
 }
 
 .ingredientsmenu{
-    position: absolute;
-    right: -174px;
-    top: 358px;
+    position: fixed;
+    left: 200px;
+    top: 479px;
+    overflow-y: auto;
+    max-height: 250px
 }
 
 .ingredientspopup{
@@ -121,9 +124,11 @@
 }
 
 .cuisinesmenu{
-    position: absolute;
-    right: -174px;
-    top: 420px;
+    position: fixed;
+    left: 200px;
+    top: 541px;
+    overflow-y: auto;
+    max-height: 250px
 }
 
 .cuisinepopup{
