--- a/client/src/components/accountpage/UserProfilePage.css
+++ b/client/src/components/accountpage/UserProfilePage.css
@@ -156,3 +156,50 @@
     padding: 20px;
     gap: 40px;
   }
+
+  
+.profileImage {
+  display: flex;
+  width: 163px;
+  height: 155px;
+  padding: 5px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-shrink: 0;
+
+  border-radius: 99px;
+  border: 1px solid #000;
+  background: #B0E0E2;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+
+  position: absolute; /* Enable overlap */
+  bottom: -70px; /* Move partially outside the profile-block */
+  left: -70px; /* Adjust as needed to control overlap */
+}
+
+.profileImage span {
+  color: #000;
+  font-family: Inter, sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.user_camera_edit {
+  width: 60px;
+  height: 41px;
+  flex-shrink: 0;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+
+  position: absolute; /* Enable overlap */
+  bottom: -5px; /* Move partially outside the profile-block */
+  right: -5px; /* Adjust as needed to control overlap */
+}
+
+.user_camera_img {
+  position: absolute;
+}
